# Eli-OS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  qemu_utils.rs  serial_port.rs  testable.rs  vga_buffer.rs
src/allocator/: linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
