[package]
name = "eli_os"
version = "0.1.0"
edition = "2024"
authors = ["Elijah elijahbrnv@gmail.com"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"

[[bin]]
name = "eli_os"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
